--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "gray-matter": "^4.0.3",
     "next": "10.1.3",
+    "raw-loader": "^4.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^6.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
