--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "tailwind-tutorial",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.0.0",
-    "@heroicons/react": "^1.0.1",
-    "@tailwindcss/forms": "^0.3.2",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "gray-matter": "^4.0.3",
-    "next": "10.1.3",
-    "raw-loader": "^4.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-markdown": "^6.0.2"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.3",
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.10",
-    "tailwindcss": "^2.1.1",
-    "typescript": "^4.2.4"
-  }
+	"name": "tailwind-tutorial",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.0.0",
+		"@heroicons/react": "^1.0.1",
+		"@tailwindcss/forms": "^0.3.2",
+		"@tailwindcss/line-clamp": "^0.2.0",
+		"gray-matter": "^4.0.3",
+		"next": "10.1.3",
+		"raw-loader": "^4.0.2",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-markdown": "^6.0.2"
+	},
+	"devDependencies": {
+		"@types/react": "^17.0.3",
+		"@types/webpack-env": "^1.16.0",
+		"autoprefixer": "^10.2.5",
+		"globby": "^11.0.3",
+		"postcss": "^8.2.10",
+		"tailwindcss": "^2.1.1",
+		"typescript": "^4.2.4"
+	}
 }
