--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"@heroicons/react": "^1.0.1",
 		"@tailwindcss/forms": "^0.3.2",
 		"@tailwindcss/line-clamp": "^0.2.0",
+		"cors": "^2.8.5",
 		"gray-matter": "^4.0.3",
 		"next": "10.1.3",
+		"nodemailer": "^6.6.0",
 		"raw-loader": "^4.0.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
@@ -23,6 +25,7 @@
 	"devDependencies": {
 		"@types/react": "^17.0.3",
 		"@types/webpack-env": "^1.16.0",
+		"@vercel/node": "^1.10.0",
 		"autoprefixer": "^10.2.5",
 		"globby": "^11.0.3",
 		"postcss": "^8.2.10",
