--- a/.env
+++ b/.env
@@ -11,5 +11,6 @@ VERCEL_GIT_COMMIT_SHA=""
 VERCEL_GIT_COMMIT_MESSAGE=""
 VERCEL_GIT_COMMIT_AUTHOR_LOGIN=""
 VERCEL_GIT_COMMIT_AUTHOR_NAME=""
+CONTACT_EMAIL_2="milan@copdeck.com"
 CONTACT_EMAIL_PASSWORD="JmQ^DhcbUcQ2*2KJ@"
 CONTACT_EMAIL="istvan@copdeck.com"
