--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
 		"jsx": "preserve",
 		"allowSyntheticDefaultImports": true
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/api/contact.ts", "pages/api/signup.ts"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/pages/api/contact.ts", "src/pages/api/signup.ts"],
 	"exclude": ["node_modules"]
 }
