--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-	"name": "tailwind-tutorial",
+	"name": "landing-page",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"start": "next start"
+		"start": "next start",
+		"export": "next export"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.0.0",
