--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-markdown": "^6.0.2",
+		"react-share": "^4.4.0",
 		"remark-gfm": "^1.0.0"
 	},
 	"devDependencies": {
