--- a/.env
+++ b/.env
@@ -11,6 +11,15 @@ VERCEL_GIT_COMMIT_SHA=""
 VERCEL_GIT_COMMIT_MESSAGE=""
 VERCEL_GIT_COMMIT_AUTHOR_LOGIN=""
 VERCEL_GIT_COMMIT_AUTHOR_NAME=""
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-BXQ43J55N9"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:451723603004:web:bbe0a4815abf0043d42739"
+NEXT_PUBLIC_MESSAGING_SENDER_ID="451723603004"
+NEXT_PUBLIC_STORAGE_BUCKET="sneakersnshit-2e22f.appspot.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="sneakersnshit-2e22f"
+NEXT_PUBLIC_FIREBASE_DATABASE_URL="https://sneakersnshit-2e22f-default-rtdb.europe-west1.firebasedatabase.app"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="sneakersnshit-2e22f.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyAN-leerYH2sI4kRBp_cBKPRmjVEGcGp7s"
+NEXT_PUBLIC_BASE_URL="https://copdeck.com"
 CONTACT_EMAIL_2="milan@copdeck.com"
 CONTACT_EMAIL_PASSWORD="JmQ^DhcbUcQ2*2KJ@"
 CONTACT_EMAIL="istvan@copdeck.com"
