--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@tailwindcss/forms": "^0.3.2",
 		"@tailwindcss/line-clamp": "^0.2.0",
 		"cors": "^2.8.5",
+		"firebase": "^8.5.0",
 		"gray-matter": "^4.0.3",
 		"next": "10.1.3",
 		"nodemailer": "^6.6.0",
