--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"nodemailer": "^6.6.0",
 		"raw-loader": "^4.0.2",
 		"react": "17.0.2",
+		"react-arrows": "^1.2.0",
 		"react-dom": "17.0.2",
 		"react-markdown": "^6.0.2",
 		"react-share": "^4.4.0",
